Working on TUI-based web UI. Terminal now holds a buffer for what is being displayed and being rendered. UI automatically resizes when window resizes. Now in color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> </head>
-    <meta charset="UTF-8">
-    <style> </style>
-    <body> </body>
-    <script> </script>
+				<head> </head>
+				<meta charset="UTF-8">
+				<link href='https://fonts.googleapis.com/css?family=Noto Sans Mono' rel='stylesheet'>
+				<style>
+								body {
+												font-family: 'Noto Sans Mono';
+												font-size: 16px;
+												background-color: #504945;
+								}
+								pre {
+												margin: 0;
+								}
+				</style>
+				<body> </body>
+				<script> </script>
 </html>
 
