Adding sections to the app

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 								body {
 												font-family: 'Noto Sans Mono';
 												font-size: 16px;
-												background-color: #504945;
+												background-color: #3c3836;
 								}
 								pre {
 												margin: 0;
