Added hydration step to the rendering process to support on-click callbacks and more!!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,13 @@
 												font-family: 'Noto Sans Mono';
 												font-size: 16px;
 												background-color: #3c3836;
+												margin: 0;
 								}
+                                #the_terminal {
+                                    width: fit-content;
+                                    block-size: fit-content;
+                                    margin: auto;
+                                }
 								pre {
 												margin: 0;
 								}
