Fixed (lack of) monospacing issue on mobile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,30 +2,28 @@
 <html lang="en">
 				<head> </head>
 				<meta charset="UTF-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1" />
-				<link href='https://fonts.googleapis.com/css?family=Noto Sans Mono' rel='stylesheet'>
+				<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+				<link href='https://adobe-fonts.github.io/source-code-pro/source-code-pro.css' rel='stylesheet'>
 				<style>
 								body {
-												font-family: 'Noto Sans Mono';
+												font-family: 'Source Code Pro', monospace;
 												font-size: 16px;
 												background-color: #3c3836;
 												margin: 0;
 								}
-                                #the_terminal {
-                                    width: fit-content;
-                                    block-size: fit-content;
-                                    margin: auto;
-                                }
-                                @media (min-width: 700px) {
-                                    pre {
-                                        margin: 0px 0px 0px 0px;
-                                    }
-                                }
-                                @media (max-width: 700px) {
-                                    pre {
-                                        margin: 0px 0px 0px 0px;
-                                    }
-                                }
+								span {
+												font-family: 'Source Code Pro', monospace;
+								}
+								pre {
+												font-family: 'Source Code Pro', monospace;
+												margin: 0px;
+								}
+								#the_terminal {
+								font-family: 'Source Code Pro', monospace;
+												width: fit-content;
+												block-size: fit-content;
+												margin: auto;
+								}
 				</style>
 				<body> </body>
 				<script> </script>
